== master

== 0.2.0 / 2008-12-14

* Remove the PluginAWeek namespace

== 0.1.0 / 2008-10-26

* Update tests to use ActionView::TestCase
* Embed menu content within a span element for better style control
* Rename :auto_link option to :link
* Add ability to render active submenus on a different part of the page for better layout control
* Add ability to turn off automatically setting html ids for menus
* Allow default class names to be configured on a per-application basis
* Change id/class css naming conventions to following something more similar to jQuery UI
* Require that the menu content always be defined (even if it's just nil) if the url isn't a hash
* Use consistent API for internals

== 0.0.5 / 2008-06-22

* Remove log files from gems

== 0.0.4 / 2008-06-01

* Remove dependency on set_or_append

== 0.0.3 / 2008-05-05

* Updated documentation

== 0.0.2 / 2007-09-26

* Add gem dependency on set_or_append
* Convert dos newlines to unix newlines
* Fix too many :nodoc: tags so that rdocs are generated properly

== 0.0.1 / 2007-08-16

* Add README documentation
* Add api documentation
* Add dependency on plugin_test_helper in order to simplify the test setup code
* Remove MainMenuBar in favor of providing a default id for MenuBar
* Refactor helper classes into individual files
* Add unit tests